--- a/ds/dbmsend.htm
+++ b/ds/dbmsend.htm
@@ -547,11 +547,13 @@
                     <text x="650" y="165" text-anchor="middle" font-size="14" fill="#4a148c">Complete DB System</text>
 
                     <!-- Connecting arrows from Module 2 and 4 to Final -->
-                    <path d="M250,205 Q300,180 350,155" stroke="#7e57c2" stroke-width="2" fill="none" />
-                    <polygon points="345,150 350,155 345,160" fill="#7e57c2" />
+                    <!-- Mod 2 (250,210) Swoop to Final (550,175) -->
+                    <path d="M250,210 Q400,280 550,175" stroke="#7e57c2" stroke-width="2" fill="none" />
+                    <polygon points="545,170 550,175 545,180" fill="#7e57c2" />
 
-                    <path d="M500,205 Q550,180 600,155" stroke="#7e57c2" stroke-width="2" fill="none" />
-                    <polygon points="595,150 600,155 595,160" fill="#7e57c2" />
+                    <!-- Mod 4 (500,210) Direct to Final (550,135) -->
+                    <path d="M500,210 Q525,170 550,135" stroke="#7e57c2" stroke-width="2" fill="none" />
+                    <polygon points="545,130 550,135 545,140" fill="#7e57c2" />
 
                     <!-- Legend -->
                     <rect x="50" y="280" width="700" height="100" rx="5" ry="5" fill="#f5f5f5" stroke="#bdbdbd"
