--- a/ds/dbms1.htm
+++ b/ds/dbms1.htm
@@ -561,8 +561,11 @@ UPDATE Student SET GPA = 3.9 WHERE StudentID = 101;</code></pre>
                     <text x="350" y="125" text-anchor="middle" font-size="16" font-weight="bold"
                         fill="#2e7d32">Attributes</text>
 
-                    <!-- Connecting line -->
+                    <!-- Connecting line (STUDENT edge to Attributes edge) -->
                     <line x1="250" y1="120" x2="310" y2="120" stroke="#7e57c2" stroke-width="2" />
+
+                    <!-- Connecting line (Attributes to Relationship) -->
+                    <line x1="390" y1="120" x2="500" y2="120" stroke="#7e57c2" stroke-width="2" />
 
                     <!-- Relationship -->
                     <path d="M500,120 L550,90 L600,120 L550,150 Z" fill="#fff3e0" stroke="#f57c00" stroke-width="3" />
@@ -725,7 +728,7 @@ UPDATE Student SET GPA = 3.9 WHERE StudentID = 101;</code></pre>
                     <text x="190" y="105" text-anchor="middle" font-size="12" font-weight="bold"
                         fill="#e65100">Supervises</text>
 
-                    <!-- Fixed overlap -->
+                    <!-- Connecting lines for recursive relationship -->
                     <path d="M210,100 L230,100 L230,50 L110,50 L110,70" stroke="#7e57c2" stroke-width="2" fill="none" />
 
                     <text x="110" y="150" text-anchor="middle" font-size="14" fill="#5e35b1">Unary (Recursive)</text>
@@ -740,7 +743,7 @@ UPDATE Student SET GPA = 3.9 WHERE StudentID = 101;</code></pre>
                     <text x="490" y="105" text-anchor="middle" font-size="12" font-weight="bold"
                         fill="#e65100">Takes</text>
 
-                    <!-- Fixed alignment -->
+                    <!-- Connecting lines for binary relationship -->
                     <line x1="510" y1="100" x2="570" y2="100" stroke="#7e57c2" stroke-width="2" />
 
                     <rect x="570" y="70" width="120" height="60" rx="5" ry="5" fill="#fce4ec" stroke="#c2185b"
@@ -772,7 +775,7 @@ UPDATE Student SET GPA = 3.9 WHERE StudentID = 101;</code></pre>
                     <text x="155" y="90" text-anchor="middle" font-size="10" fill="#5e35b1">(1,1)</text>
                     <text x="225" y="90" text-anchor="middle" font-size="10" fill="#5e35b1">(0,1)</text>
 
-                    <!-- Fixed alignment -->
+                    <!-- Connecting lines for 1:1 relationship -->
                     <line x1="210" y1="100" x2="270" y2="100" stroke="#7e57c2" stroke-width="2" />
 
                     <rect x="270" y="70" width="120" height="60" rx="5" ry="5" fill="#e8f5e9" stroke="#388e3c"
@@ -795,7 +798,7 @@ UPDATE Student SET GPA = 3.9 WHERE StudentID = 101;</code></pre>
                     <text x="555" y="90" text-anchor="middle" font-size="10" fill="#5e35b1">(1,1)</text>
                     <text x="625" y="90" text-anchor="middle" font-size="10" fill="#5e35b1">(0,N)</text>
 
-                    <!-- Fixed alignment -->
+                    <!-- Connecting lines for 1:N relationship -->
                     <line x1="610" y1="100" x2="670" y2="100" stroke="#7e57c2" stroke-width="2" />
 
                     <rect x="670" y="70" width="120" height="60" rx="5" ry="5" fill="#e8f5e9" stroke="#388e3c"
@@ -818,7 +821,7 @@ UPDATE Student SET GPA = 3.9 WHERE StudentID = 101;</code></pre>
                     <text x="155" y="210" text-anchor="middle" font-size="10" fill="#5e35b1">(0,N)</text>
                     <text x="225" y="210" text-anchor="middle" font-size="10" fill="#5e35b1">(0,N)</text>
 
-                    <!-- Fixed alignment -->
+                    <!-- Connecting lines for M:N relationship -->
                     <line x1="210" y1="220" x2="270" y2="220" stroke="#7e57c2" stroke-width="2" />
 
                     <rect x="270" y="190" width="120" height="60" rx="5" ry="5" fill="#e8f5e9" stroke="#388e3c"
@@ -838,9 +841,8 @@ UPDATE Student SET GPA = 3.9 WHERE StudentID = 101;</code></pre>
                     <text x="590" y="225" text-anchor="middle" font-size="12" font-weight="bold"
                         fill="#e65100">Works_In</text>
 
-                    <!-- Fixed alignment -->
+                    <!-- Connecting lines for participation constraints -->
                     <text x="540" y="215" text-anchor="middle" font-size="10" fill="#5e35b1">Total</text>
-
                     <line x1="610" y1="220" x2="670" y2="220" stroke="#7e57c2" stroke-width="2" />
                     <text x="640" y="215" text-anchor="middle" font-size="10" fill="#5e35b1">Partial</text>
 
@@ -1019,7 +1021,7 @@ UPDATE Student SET GPA = 3.9 WHERE StudentID = 101;</code></pre>
                     <!-- WORKS_FOR to EMPLOYEE -->
                     <line x1="380" y1="130" x2="400" y2="130" stroke="#1976d2" stroke-width="2" />
                     <!-- DEPARTMENT to CONTROLS -->
-                    <line x1="180" y1="150" x2="180" y2="150" stroke="#f57c00" stroke-width="2" />
+                    <line x1="180" y1="150" x2="180" y2="160" stroke="#f57c00" stroke-width="2" />
                     <line x1="180" y1="190" x2="180" y2="200" stroke="#f57c00" stroke-width="2" />
                     <!-- PROJECT to WORKS_ON -->
                     <line x1="260" y1="240" x2="300" y2="240" stroke="#388e3c" stroke-width="2" />
