--- a/ds/dbms1.htm
+++ b/ds/dbms1.htm
@@ -962,93 +962,97 @@ UPDATE Student SET GPA = 3.9 WHERE StudentID = 101;</code></pre>
                     <text x="480" y="140" text-anchor="middle" font-size="12" fill="#1b5e20">Name, Salary,
                         BirthDate</text>
 
-                    <!-- PROJECT Entity -->
-                    <rect x="100" y="200" width="160" height="80" rx="5" ry="5" fill="#fff3e0" stroke="#f57c00"
+                    <!-- PROJECT Entity (Moved down for spacing) -->
+                    <rect x="100" y="240" width="160" height="80" rx="5" ry="5" fill="#fff3e0" stroke="#f57c00"
                         stroke-width="3" />
-                    <text x="180" y="230" text-anchor="middle" font-size="16" font-weight="bold"
+                    <text x="180" y="270" text-anchor="middle" font-size="16" font-weight="bold"
                         fill="#e65100">PROJECT</text>
-                    <line x1="100" y1="240" x2="260" y2="240" stroke="#f57c00" stroke-width="1" />
-                    <text x="180" y="255" text-anchor="middle" font-size="12" fill="#bf360c">ProjID (PK)</text>
-                    <text x="180" y="270" text-anchor="middle" font-size="12" fill="#bf360c">Name, Location,
+                    <line x1="100" y1="280" x2="260" y2="280" stroke="#f57c00" stroke-width="1" />
+                    <text x="180" y="295" text-anchor="middle" font-size="12" fill="#bf360c">ProjID (PK)</text>
+                    <text x="180" y="310" text-anchor="middle" font-size="12" fill="#bf360c">Name, Location,
                         Budget</text>
 
-                    <!-- DEPENDENT Weak Entity -->
-                    <rect x="550" y="200" width="160" height="80" rx="5" ry="5" fill="#fce4ec" stroke="#c2185b"
+                    <!-- DEPENDENT Weak Entity (Aligned with Project row, center x=510) -->
+                    <rect x="430" y="240" width="160" height="80" rx="5" ry="5" fill="#fce4ec" stroke="#c2185b"
                         stroke-width="3" />
-                    <rect x="553" y="203" width="154" height="74" rx="5" ry="5" fill="#fce4ec" stroke="#c2185b"
+                    <rect x="433" y="243" width="154" height="74" rx="5" ry="5" fill="#fce4ec" stroke="#c2185b"
                         stroke-width="2" />
-                    <text x="630" y="230" text-anchor="middle" font-size="16" font-weight="bold"
+                    <text x="510" y="270" text-anchor="middle" font-size="16" font-weight="bold"
                         fill="#ad1457">DEPENDENT</text>
-                    <line x1="550" y1="240" x2="710" y2="240" stroke="#c2185b" stroke-width="1" />
-                    <text x="630" y="255" text-anchor="middle" font-size="12" fill="#880e4f">EmpID (FK), DepName
+                    <line x1="430" y1="280" x2="590" y2="280" stroke="#c2185b" stroke-width="1" />
+                    <text x="510" y="295" text-anchor="middle" font-size="12" fill="#880e4f">EmpID (FK), DepName
                         (PPK)</text>
-                    <text x="630" y="270" text-anchor="middle" font-size="12" fill="#880e4f">Relationship,
+                    <text x="510" y="310" text-anchor="middle" font-size="12" fill="#880e4f">Relationship,
                         BirthDate</text>
 
-                    <!-- WORKS_FOR Relationship -->
-                    <path d="M300,130 L340,110 L380,130 L340,150 Z" fill="#bbdefb" stroke="#1976d2" stroke-width="2" />
-                    <text x="340" y="135" text-anchor="middle" font-size="12" font-weight="bold"
+                    <!-- WORKS_FOR Relationship (Centered at 330) -->
+                    <path d="M290,130 L330,110 L370,130 L330,150 Z" fill="#bbdefb" stroke="#1976d2" stroke-width="2" />
+                    <text x="330" y="135" text-anchor="middle" font-size="12" font-weight="bold"
                         fill="#0d47a1">Works_For</text>
-                    <text x="305" y="115" text-anchor="middle" font-size="10" fill="#5e35b1">(N,1)</text>
-                    <text x="375" y="115" text-anchor="middle" font-size="10" fill="#5e35b1">(1,1)</text>
+                    <text x="300" y="120" text-anchor="middle" font-size="10" fill="#5e35b1">(N,1)</text>
+                    <text x="360" y="120" text-anchor="middle" font-size="10" fill="#5e35b1">(1,1)</text>
 
-                    <!-- CONTROLS Relationship -->
-                    <path d="M180,150 L200,170 L180,190 L160,170 Z" fill="#ffcc80" stroke="#f57c00" stroke-width="2" />
-                    <text x="180" y="175" text-anchor="middle" font-size="12" font-weight="bold"
+                    <!-- CONTROLS Relationship (Centered vertically between Dept and Project) -->
+                    <path d="M160,190 L180,170 L200,190 L180,210 Z" fill="#ffcc80" stroke="#f57c00" stroke-width="2" />
+                    <text x="230" y="195" text-anchor="middle" font-size="12" font-weight="bold"
                         fill="#e65100">Controls</text>
-                    <text x="160" y="160" text-anchor="middle" font-size="10" fill="#5e35b1">(1,1)</text>
-                    <text x="210" y="180" text-anchor="middle" font-size="10" fill="#5e35b1">(0,N)</text>
+                    <text x="170" y="165" text-anchor="middle" font-size="10" fill="#5e35b1">(1,1)</text>
+                    <text x="170" y="225" text-anchor="middle" font-size="10" fill="#5e35b1">(0,N)</text>
 
-                    <!-- WORKS_ON Relationship -->
-                    <path d="M300,240 L340,220 L380,240 L340,260 Z" fill="#c8e6c9" stroke="#388e3c" stroke-width="2" />
-                    <text x="340" y="245" text-anchor="middle" font-size="12" font-weight="bold"
+                    <!-- WORKS_ON Relationship (Connecting Project and Employee) -->
+                    <!-- Moved down to align with Project row -->
+                    <path d="M290,280 L330,260 L370,280 L330,300 Z" fill="#c8e6c9" stroke="#388e3c" stroke-width="2" />
+                    <text x="330" y="285" text-anchor="middle" font-size="12" font-weight="bold"
                         fill="#2e7d32">Works_On</text>
-                    <text x="305" y="225" text-anchor="middle" font-size="10" fill="#5e35b1">(0,N)</text>
-                    <text x="375" y="225" text-anchor="middle" font-size="10" fill="#5e35b1">(0,N)</text>
+                    <text x="300" y="270" text-anchor="middle" font-size="10" fill="#5e35b1">(0,N)</text>
+                    <text x="360" y="270" text-anchor="middle" font-size="10" fill="#5e35b1">(0,N)</text>
 
-                    <!-- MANAGES Relationship -->
-                    <path d="M300,70 L340,50 L380,70 L340,90 Z" fill="#b3e5fc" stroke="#0288d1" stroke-width="2" />
-                    <text x="340" y="75" text-anchor="middle" font-size="12" font-weight="bold"
+                    <!-- MANAGES Relationship (Centered at 330) -->
+                    <path d="M290,70 L330,50 L370,70 L330,90 Z" fill="#b3e5fc" stroke="#0288d1" stroke-width="2" />
+                    <text x="330" y="75" text-anchor="middle" font-size="12" font-weight="bold"
                         fill="#0277bd">Manages</text>
 
-                    <!-- SUPERVISES Relationship (Recursive) -->
-                    <path d="M480,150 L510,130 L540,150 L510,170 Z" fill="#dcedc8" stroke="#689f38" stroke-width="2" />
-                    <text x="510" y="155" text-anchor="middle" font-size="12" font-weight="bold"
+                    <!-- SUPERVISES Relationship (Recursive on Employee Right) -->
+                    <path d="M580,110 L610,90 L640,110 L610,130 Z" fill="#dcedc8" stroke="#689f38" stroke-width="2" />
+                    <text x="610" y="115" text-anchor="middle" font-size="12" font-weight="bold"
                         fill="#558b2f">Supervises</text>
 
-                    <!-- HAS Relationship (Identifying) -->
+                    <!-- HAS Relationship (Identifying - Below Employee) -->
                     <path d="M480,190 L510,170 L540,190 L510,210 Z" fill="#f8bbd9" stroke="#d81b60" stroke-width="2" />
-                    <path d="M482,192 L510,172 L538,192 L510,212 Z" fill="#f8bbd9" stroke="#d81b60" stroke-width="1" />
-                    <text x="510" y="195" text-anchor="middle" font-size="12" font-weight="bold"
+                    <path d="M484,190 L510,174 L536,190 L510,206 Z" fill="#f8bbd9" stroke="#d81b60" stroke-width="1" />
+                    <text x="575" y="195" text-anchor="middle" font-size="12" font-weight="bold"
                         fill="#c2185b">Has</text>
 
                     <!-- Connecting Lines -->
-                    <!-- DEPARTMENT to WORKS_FOR -->
-                    <line x1="260" y1="130" x2="300" y2="130" stroke="#1976d2" stroke-width="2" />
-                    <!-- WORKS_FOR to EMPLOYEE -->
-                    <line x1="380" y1="130" x2="400" y2="130" stroke="#1976d2" stroke-width="2" />
-                    <!-- DEPARTMENT to CONTROLS -->
-                    <line x1="180" y1="150" x2="180" y2="160" stroke="#f57c00" stroke-width="2" />
-                    <line x1="180" y1="190" x2="180" y2="200" stroke="#f57c00" stroke-width="2" />
-                    <!-- PROJECT to WORKS_ON -->
-                    <line x1="260" y1="240" x2="300" y2="240" stroke="#388e3c" stroke-width="2" />
-                    <!-- WORKS_ON to EMPLOYEE -->
-                    <line x1="380" y1="240" x2="400" y2="240" stroke="#388e3c" stroke-width="2" />
-                    <!-- EMPLOYEE to MANAGES -->
-                    <line x1="400" y1="100" x2="380" y2="70" stroke="#0288d1" stroke-width="2" />
-                    <!-- MANAGES to DEPARTMENT -->
-                    <line x1="300" y1="70" x2="260" y2="100" stroke="#0288d1" stroke-width="2" />
-                    <!-- EMPLOYEE to SUPERVISES (recursive) -->
-                    <line x1="480" y1="150" x2="480" y2="130" stroke="#689f38" stroke-width="2" />
-                    <line x1="480" y1="130" x2="510" y2="130" stroke="#689f38" stroke-width="2" />
-                    <line x1="560" y1="110" x2="600" y2="110" stroke="#689f38" stroke-width="2" />
-                    <line x1="600" y1="110" x2="600" y2="150" stroke="#689f38" stroke-width="2" />
-                    <line x1="600" y1="150" x2="540" y2="150" stroke="#689f38" stroke-width="2" />
+                    <!-- DEPARTMENT(260) to WORKS_FOR(290) -->
+                    <line x1="260" y1="130" x2="290" y2="130" stroke="#1976d2" stroke-width="2" />
+                    <!-- WORKS_FOR(370) to EMPLOYEE(400) -->
+                    <line x1="370" y1="130" x2="400" y2="130" stroke="#1976d2" stroke-width="2" />
 
-                    <!-- EMPLOYEE to HAS -->
-                    <line x1="480" y1="150" x2="480" y2="190" stroke="#d81b60" stroke-width="2" />
-                    <!-- HAS to DEPENDENT -->
-                    <line x1="540" y1="190" x2="550" y2="200" stroke="#d81b60" stroke-width="2" />
+                    <!-- DEPARTMENT(180,150) to CONTROLS(180,170) -->
+                    <line x1="180" y1="150" x2="180" y2="170" stroke="#f57c00" stroke-width="2" />
+                    <!-- CONTROLS(180,210) to PROJECT(180,240) -->
+                    <line x1="180" y1="210" x2="180" y2="240" stroke="#f57c00" stroke-width="2" />
+
+                    <!-- PROJECT(260,280) to WORKS_ON(290,280) -->
+                    <line x1="260" y1="280" x2="290" y2="280" stroke="#388e3c" stroke-width="2" />
+                    <!-- WORKS_ON(370,280) to EMPLOYEE(480,150) - Orthogonal routing -->
+                    <path d="M370,280 L480,280 L480,150" stroke="#388e3c" stroke-width="2" fill="none" />
+
+                    <!-- EMPLOYEE(400) to MANAGES(370) -->
+                    <line x1="400" y1="70" x2="370" y2="70" stroke="#0288d1" stroke-width="2" />
+                    <!-- MANAGES(290) to DEPARTMENT(260) -->
+                    <line x1="290" y1="70" x2="260" y2="70" stroke="#0288d1" stroke-width="2" />
+
+                    <!-- EMPLOYEE(560) to SUPERVISES(580) -->
+                    <line x1="560" y1="110" x2="580" y2="110" stroke="#689f38" stroke-width="2" />
+                    <!-- SUPERVISES(640) back to EMPLOYEE(530,70) -->
+                    <path d="M640,110 L660,110 L660,50 L530,50 L530,70" stroke="#689f38" stroke-width="2" fill="none" />
+
+                    <!-- EMPLOYEE(480,150) to HAS(480,190) is blocked, route via 510 -->
+                    <line x1="510" y1="150" x2="510" y2="170" stroke="#d81b60" stroke-width="2" />
+                    <!-- HAS(510,210) to DEPENDENT(510,240) -->
+                    <line x1="510" y1="210" x2="510" y2="240" stroke="#d81b60" stroke-width="2" />
 
                     <!-- Relationship Attributes -->
                     <!-- MANAGES has StartDate -->
