docs: clarify content rendering comment

--- a/audio.htm
+++ b/audio.htm
@@ -2588,7 +2588,7 @@
                 }
             });
 
-            // Render Content
+            // Render Content IEDC
             if (tabName === 'podcasts') {
                 els.title.innerText = "Podcast Library";
                 renderPodcasts();
