feat: Add topic categorization to content and implement a new subject-based browsing view.

--- a/audio.htm
+++ b/audio.htm
@@ -49,6 +49,10 @@
             <i data-lucide="layers" class="b-nav-icon"></i>
             <span class="b-nav-label">Recall</span>
         </button>
+        <button class="b-nav-item" onclick="switchTab('subjects')" id="nav-subjects">
+            <i data-lucide="layout-grid" class="b-nav-icon"></i>
+            <span class="b-nav-label">Subjects</span>
+        </button>
         <button class="b-nav-item" onclick="switchTab('context')" id="nav-context">
             <i data-lucide="library-big" class="b-nav-icon"></i>
             <span class="b-nav-label">Context</span>
