refactor: Relocate and rename 'Subjects' bottom nav item to 'Home'.

--- a/audio.htm
+++ b/audio.htm
@@ -33,6 +33,10 @@
 
     <!-- BOTTOM NAV (Floating) -->
     <nav class="bottom-nav" id="bottom-nav">
+        <button class="b-nav-item" onclick="switchTab('subjects')" id="nav-subjects">
+            <i data-lucide="layout-grid" class="b-nav-icon"></i>
+            <span class="b-nav-label">Home</span>
+        </button>
         <button class="b-nav-item active" onclick="switchTab('podcasts')" id="nav-podcasts">
             <i data-lucide="headphones" class="b-nav-icon"></i>
             <span class="b-nav-label">Podcasts</span>
@@ -48,10 +52,6 @@
         <button class="b-nav-item" onclick="switchTab('flashcards')" id="nav-flashcards">
             <i data-lucide="layers" class="b-nav-icon"></i>
             <span class="b-nav-label">Recall</span>
-        </button>
-        <button class="b-nav-item" onclick="switchTab('subjects')" id="nav-subjects">
-            <i data-lucide="layout-grid" class="b-nav-icon"></i>
-            <span class="b-nav-label">Subjects</span>
         </button>
         <button class="b-nav-item" onclick="switchTab('context')" id="nav-context">
             <i data-lucide="library-big" class="b-nav-icon"></i>
