--- a/audio.htm
+++ b/audio.htm
@@ -33,25 +33,9 @@
 
     <!-- BOTTOM NAV (Floating) -->
     <nav class="bottom-nav" id="bottom-nav">
-        <button class="b-nav-item" onclick="switchTab('subjects')" id="nav-subjects">
+        <button class="b-nav-item active" onclick="switchTab('subjects')" id="nav-subjects">
             <i data-lucide="layout-grid" class="b-nav-icon"></i>
             <span class="b-nav-label">Home</span>
-        </button>
-        <button class="b-nav-item active" onclick="switchTab('podcasts')" id="nav-podcasts">
-            <i data-lucide="headphones" class="b-nav-icon"></i>
-            <span class="b-nav-label">Podcasts</span>
-        </button>
-        <button class="b-nav-item" onclick="switchTab('videos')" id="nav-videos">
-            <i data-lucide="youtube" class="b-nav-icon"></i>
-            <span class="b-nav-label">Videos</span>
-        </button>
-        <button class="b-nav-item" onclick="switchTab('mindmap')" id="nav-mindmap">
-            <i data-lucide="brain-circuit" class="b-nav-icon"></i>
-            <span class="b-nav-label">Map</span>
-        </button>
-        <button class="b-nav-item" onclick="switchTab('flashcards')" id="nav-flashcards">
-            <i data-lucide="layers" class="b-nav-icon"></i>
-            <span class="b-nav-label">Recall</span>
         </button>
         <button class="b-nav-item" onclick="switchTab('context')" id="nav-context">
             <i data-lucide="library-big" class="b-nav-icon"></i>
